fix(newsletter): 100% width on mobile

--- a/client/public/css/newsletter.css
+++ b/client/public/css/newsletter.css
@@ -1,5 +1,7 @@
-#newsletter-text-container {
-    width: 75%;
+@media screen and (min-width: 600px) {
+    #newsletter-text-container {
+        width: 75%;
+    }
 }
 
 #newsletter-form {
